[project]
name = "micro-debugger-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Juan David Salamanca",email = "salamancajd14@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "scapy (>=2.6.1,<3.0.0)",
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "mypy (>=1.15.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
